image size fixed on firefox

--- a/styles/viewer.css
+++ b/styles/viewer.css
@@ -27,6 +27,7 @@ div#viewthumbnail{
 }
 
 div#viewthumbnail img{
+    display: block;
     height: 98px;
     border-style: solid;
     border-width: 1px;
